--- a/node/index.html
+++ b/node/index.html
@@ -3,11 +3,12 @@
 <head>
   <title>Tracking the dark dao</title>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-  
-  <script src="bundle.js"></script>
+
+  <script src="bundle.js" defer></script>
 </head>
 <body>
   <h1>Tracking dark dao addresses</h1>
   <br>
+  <span id="status"></span>
   </body>
 </html>
